almost completed all html basic structures to all pages

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,12 +15,12 @@
   </head>
   <body>
     <section class="head-section">
-      <div class="website-name"><strong>WebsiteLoChudu</strong></div>
+      <a class="website-name" href="index.html"
+        ><strong>WebsiteLoChudu</strong></a
+      >
       <nav class="nav">
-        <a href="hostelLogin.jsp" class="Workspace"
-          ><strong>Workspace</strong></a
-        >
-        <a href="hostelRegistration.jsp" class="Register"
+        <a href="Login.jsp" class="Workspace"><strong>Workspace</strong></a>
+        <a href="Registration.jsp" class="Register"
           ><strong>Register</strong></a
         >
       </nav>
