completed hostelsLoad webpage.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -20,7 +20,7 @@
       >
       <nav class="nav">
         <a href="Login.jsp" class="Workspace"><strong>Workspace</strong></a>
-        <a href="Registration.jsp" class="Register"
+        <a href="hostelRegistrationS1.jsp" class="Register"
           ><strong>Register</strong></a
         >
       </nav>
