completed home page, hostels load responsive, location fieled changed.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/indexMediaQueries.css" />
     <title>WebsiteLoChudu.com</title>
   </head>
   <body>
@@ -33,9 +34,11 @@
         <p class="phrase"><strong>Work</strong></p>
         <p class="phrase"><strong>Publish</strong></p>
         <p>
-          "We are here to provide the <strong>Best</strong> information about a
-          particular domain, also we provide Web tools to work and helps you to
-          publish your things on the Internet."
+          <strong>
+            "We are here to provide the Best information about a
+            particular domain, also we provide Web tools to work and helps you to
+            publish your things on the Internet."
+          </strong>
         </p>
       </div>
       <div class="illustration">
@@ -44,11 +47,6 @@
           src="images\home-illustration.svg"
           alt="illustrating how the WebsiteLoChudu work"
         />
-        <!-- <img
-          class="illustration1-img"
-          src="images\workspace.jpeg"
-          alt="working"
-        /> -->
       </div>
     </section>
 
@@ -60,10 +58,84 @@
               <img src="images\bed.PNG" alt="bed" />
               <p class="module-name">Hostels</p>
             </div>
-            <!-- <a href="#" class="explore">explore..</a> -->
           </div>
         </a>
       </div>
     </section>
+
+    <footer class="">
+      <div class="footer-section">
+        <div class="production header"><p><strong>a <span class="word-color">Ravipati Vasanth</span> production</strong></p></div>
+        <div class="grid-3-div">
+          <div class="flex-div-column">
+            <div class="header word-color">
+              <p><strong>Note from us</strong></p>
+            </div>
+            <div class="items">
+              <p class="footer-info" style="margin: 0rem; padding: 0rem;"><strong>Illustrations from</strong></p>
+              <p style="margin: 0rem; padding: 0rem;">
+                <a href="https://www.storyset.com/" class="word-color link"
+                  ><strong>Storyset</strong></a
+                >
+              </p>
+              <p class="footer-info" style="margin: 0rem; padding: 0rem;"><strong>Icons from</strong></p>
+              <p style="margin: 0rem; padding: 0rem;">
+                <a href="https://iconscout.com/" class="word-color link"
+                  ><strong>iconscout</strong></a
+                ><br>
+                <a href="https://www.flaticon.com/" class="word-color link"
+                  ><strong>flaticons</strong></a
+                >
+              </p>
+            </div>
+          </div>
+          <div class="flex-div-column">
+            <div class="header word-color">
+              <p><strong>Social Media</strong></p>
+            </div>
+            <div class="items">
+              <p class="footer-info" style="margin: 0rem; padding: 0rem;">
+                <strong>Gmail</strong>
+              </p>
+              <p class="word-color footer-info" style="margin: 0rem; padding: 0rem;">
+                <strong>websitelochudu@gmail.com</strong>
+              </p>
+              <p class="footer-info">
+                <strong>Instagram</strong>
+              </p>
+              <p class="word-color footer-info">
+                <strong>@websitelochudu</strong>
+              </p>
+            </div>
+          </div>
+          <div class="flex-div-column">
+            <div class="header word-color">
+              <p><strong>Developer's Contact</strong></p>
+            </div>
+            <div class="items">
+              <p class="footer-info">
+                <strong>Gmail</strong>
+              </p>
+              <p class="word-color footer-info" >
+                <strong>vasanthravipati99@gmail.com</strong>
+              </p>
+              <p class="footer-info">
+                <strong>GitHub</strong>
+              </p>
+              <p class="word-color footer-info">
+                <strong>@RAVIPATI-VASANTH</strong>
+              </p>
+              <p class="footer-info">
+                <strong>LinkedIn</strong>
+              </p>
+              <p class="word-color footer-info">
+                <strong>Vasanth Ravipati</strong>
+              </p>
+            </div>
+          </div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
