--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -65,7 +65,7 @@
 
     <footer class="">
       <div class="footer-section">
-        <div class="production header"><p><strong>a <span class="word-color">Ravipati Vasanth</span> production</strong></p></div>
+        <div class="production header"><p><strong>a <span class="word-color">Vasanth Ravipati</span> production</strong></p></div>
         <div class="grid-3-div">
           <div class="flex-div-column">
             <div class="header word-color">
