completed All Day-76 in Trello

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,7 +17,7 @@
   <body>
     <section class="head-section">
       <a class="website-name" href="index.html"
-        ><strong>WebsiteLoChudu</strong></a
+        ><strong>WebsiteLoChoodu</strong></a
       >
       <nav class="nav">
         <a href="Login.jsp" class="Workspace"><strong>Workspace</strong></a>
@@ -52,7 +52,7 @@
 
     <section class="module-section">
       <div class="module-grid-container">
-        <a href="hostelsload.jsp">
+        <a href="Hostels.jsp">
           <div class="module">
             <div class="img-tag-holder">
               <img src="images\bed.PNG" alt="bed" />
