--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -100,15 +100,15 @@
               <p class="footer-info" style="margin: 0rem; padding: 0rem;">
                 <strong>Gmail</strong>
               </p>
-              <p class="word-color link" style="margin: 0rem; padding: 0rem;">
+              <a href = "mailto: websitelochoodu@gmail.com" class="word-color link" style="margin: 0rem; padding: 0rem;">
                 <strong>websitelochoodu@gmail.com</strong>
-              </p>
+              </a>
               <p class="footer-info" style="margin: 0rem; padding: 0rem;">
                 <strong>Instagram</strong>
               </p>
-              <p class="word-color link" style="margin: 0rem; padding: 0rem;">
+              <a href="https://instagram.com/websitelochoodu" class="word-color link" style="margin: 0rem; padding: 0rem;">
                 <strong>@websitelochoodu</strong>
-              </p>
+              </a>
             </div>
           </div>
           <div class="flex-div-column">
@@ -119,21 +119,21 @@
               <p class="footer-info" style="margin: 0rem; padding: 0rem;">
                 <strong>Gmail</strong>
               </p>
-              <p class="word-color link" style="margin: 0rem; padding: 0rem;">
+              <a href = "mailto: vasanthravipati99@gmail.com" class="word-color link" style="margin: 0rem; padding: 0rem;">
                 <strong>vasanthravipati99@gmail.com</strong>
-              </p>
+              </a>
               <p class="footer-info" style="margin: 0rem; padding: 0rem;">
                 <strong>GitHub</strong>
               </p>
-              <p class="word-color link" style="margin: 0rem; padding: 0rem;">
+              <a href="https://github.com/RAVIPATI-VASANTH" class="word-color link" style="margin: 0rem; padding: 0rem;">
                 <strong>@RAVIPATI-VASANTH</strong>
-              </p>
+              </a>
               <p class="footer-info" style="margin: 0rem; padding: 0rem;">
                 <strong>LinkedIn</strong>
               </p>
-              <p class="word-color link" style="margin: 0rem; padding: 0rem;">
+              <a href="https://www.linkedin.com/in/vasanth-ravipati-4662a3208/" class="word-color link" style="margin: 0rem; padding: 0rem;">
                 <strong>Vasanth Ravipati</strong>
-              </p>
+              </a>
             </div>
           </div>
           </div>
