--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,13 +7,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@500;600;700&display=swap"
-    rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@500;600;700&display=swap"
+      rel="stylesheet"
     />
     <title>WebsiteLoChoodu - Find Explore Work Publish</title>
-    <meta name="description" content="Find Explore Work Publish - We are here to provide the Best information about a
+    <meta
+      name="description"
+      content="Find Explore Work Publish - We are here to provide the Best information about a
     particular domain, also we provide Web tools to work and helps you to
-    publish your things on the Internet.">
+    publish your things on the Internet."
+    />
     <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="css/indexMediaQueries.css" />
   </head>
@@ -38,9 +41,9 @@
         <p class="phrase"><strong>Publish</strong></p>
         <p>
           <strong>
-            "We are here to provide the Best information about a
-            particular domain, also we provide Web tools to work and helps you to
-            publish your things on the Internet."
+            "We are here to provide the Best information about a particular
+            domain, also we provide Web tools to work and helps you to publish
+            your things on the Internet."
           </strong>
         </p>
       </div>
@@ -68,24 +71,36 @@
 
     <footer class="">
       <div class="footer-section">
-        <div class="production header"><p><strong>a <span class="word-color">Vasanth Ravipati</span> production</strong></p></div>
+        <div class="production header">
+          <p>
+            <strong
+              >a
+              <span class="word-color">Vasanth Ravipati</span>
+              production</strong
+            >
+          </p>
+        </div>
         <div class="grid-3-div">
           <div class="flex-div-column">
             <div class="header word-color">
               <p><strong>Resources</strong></p>
             </div>
             <div class="items">
-              <p class="footer-info" style="margin: 0rem; padding: 0rem;"><strong>Illustrations from</strong></p>
-              <p style="margin: 0rem; padding: 0rem;">
+              <p class="footer-info" style="margin: 0rem; padding: 0rem">
+                <strong>Illustrations from</strong>
+              </p>
+              <p style="margin: 0rem; padding: 0rem">
                 <a href="https://www.storyset.com/" class="word-color link"
                   ><strong>Storyset</strong></a
                 >
               </p>
-              <p class="footer-info" style="margin: 0rem; padding: 0rem;"><strong>Icons from</strong></p>
-              <p style="margin: 0rem; padding: 0rem;">
+              <p class="footer-info" style="margin: 0rem; padding: 0rem">
+                <strong>Icons from</strong>
+              </p>
+              <p style="margin: 0rem; padding: 0rem">
                 <a href="https://iconscout.com/" class="word-color link"
                   ><strong>iconscout</strong></a
-                ><br>
+                ><br />
                 <a href="https://www.flaticon.com/" class="word-color link"
                   ><strong>flaticons</strong></a
                 >
@@ -97,16 +112,24 @@
               <p><strong>Social Media</strong></p>
             </div>
             <div class="items">
-              <p class="footer-info" style="margin: 0rem; padding: 0rem;">
+              <p class="footer-info" style="margin: 0rem; padding: 0rem">
                 <strong>Gmail</strong>
               </p>
-              <a href = "mailto: websitelochoodu@gmail.com" class="word-color link" style="margin: 0rem; padding: 0rem;">
+              <a
+                href="mailto: websitelochoodu@gmail.com"
+                class="word-color link"
+                style="margin: 0rem; padding: 0rem"
+              >
                 <strong>websitelochoodu@gmail.com</strong>
               </a>
-              <p class="footer-info" style="margin: 0rem; padding: 0rem;">
+              <p class="footer-info" style="margin: 0rem; padding: 0rem">
                 <strong>Instagram</strong>
               </p>
-              <a href="https://instagram.com/websitelochoodu" class="word-color link" style="margin: 0rem; padding: 0rem;">
+              <a
+                href="https://instagram.com/websitelochoodu"
+                class="word-color link"
+                style="margin: 0rem; padding: 0rem"
+              >
                 <strong>@websitelochoodu</strong>
               </a>
             </div>
@@ -116,26 +139,37 @@
               <p><strong>Developer's Contact</strong></p>
             </div>
             <div class="items">
-              <p class="footer-info" style="margin: 0rem; padding: 0rem;">
+              <p class="footer-info" style="margin: 0rem; padding: 0rem">
                 <strong>Gmail</strong>
               </p>
-              <a href = "mailto: vasanthravipati99@gmail.com" class="word-color link" style="margin: 0rem; padding: 0rem;">
+              <a
+                href="mailto: vasanthravipati99@gmail.com"
+                class="word-color link"
+                style="margin: 0rem; padding: 0rem"
+              >
                 <strong>vasanthravipati99@gmail.com</strong>
               </a>
-              <p class="footer-info" style="margin: 0rem; padding: 0rem;">
+              <p class="footer-info" style="margin: 0rem; padding: 0rem">
                 <strong>GitHub</strong>
               </p>
-              <a href="https://github.com/RAVIPATI-VASANTH" class="word-color link" style="margin: 0rem; padding: 0rem;">
+              <a
+                href="https://github.com/RAVIPATI-VASANTH"
+                class="word-color link"
+                style="margin: 0rem; padding: 0rem"
+              >
                 <strong>@RAVIPATI-VASANTH</strong>
               </a>
-              <p class="footer-info" style="margin: 0rem; padding: 0rem;">
+              <p class="footer-info" style="margin: 0rem; padding: 0rem">
                 <strong>LinkedIn</strong>
               </p>
-              <a href="https://www.linkedin.com/in/vasanth-ravipati-4662a3208/" class="word-color link" style="margin: 0rem; padding: 0rem;">
+              <a
+                href="https://www.linkedin.com/in/vasanth-ravipati-4662a3208/"
+                class="word-color link"
+                style="margin: 0rem; padding: 0rem"
+              >
                 <strong>Vasanth Ravipati</strong>
               </a>
             </div>
-          </div>
           </div>
         </div>
       </div>
